fixed number spacing; started BeepTest UI

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+h1 {
+  margin: 30px 0px 0px 0px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -18,6 +22,10 @@ body {
   background: #f9fbfc;
 }
 
+.hide {
+  visibility: hidden;
+}
+
 button {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -25,6 +33,10 @@ button {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+select {
+  text-align-last: center;
 }
 
 .main {
@@ -67,5 +79,5 @@ button {
 }
 
 .number {
-  font-size: 70px;
+  font-size: 80px;
 }
